# SCROOM-plugin-cpp

./: .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  ENVIRONMENT.cmd.in  ENVIRONMENT.in  Makefile.am  README.md  configure.ac  travis
.github/workflows/: check_formatting.yml  cmake.yml
build-aux/: git-version-gen
build_scripts/: build-plugins  build-scroom
build_scripts/github/: build-cmake-mingw
build_scripts/travis/: build-plugins  kees-jan  upload-windows-artifacts
build_scripts/travis/config/: project_rsa.enc
build_scripts/windows/: post-install-cmake-hook.sh
cmake/: ProjectVersion.cmake
documentation/: readme.md  readme.txt
plugin-build/: Makefile  config.h  config.status  doxyfile  libtool
plugins/: CMakeLists.txt
plugins/colorconfig/: CMakeLists.txt  CustomColor.cc  CustomColor.hh  CustomColorConfig.cc  CustomColorOperations.hh  colorconfig.cc  colorconfig.hh  custom-colors.hh  main.cc
plugins/colorconfig/schema/: ColoursSchema.json
plugins/example/: example.cc
plugins/pipette/: pipette.cc  pipette.hh
plugins/pipette/src/: main.cc  pipette.cc  pipette.hh
plugins/pipette/test/: main.cc  pipette-tests  pipette-tests.cc
plugins/sep/: CMakeLists.txt  main.cc  sep-helpers.cc  sep-helpers.hh  sep.cc  sep.hh  seppresentation.cc  seppresentation.hh  sepsource.cc  sepsource.hh
plugins/sep/colorconfig/: CustomColor.hh  CustomColorConfig.cc  CustomColorConfig.hh  CustomColorHelpers.cc  CustomColorHelpers.hh  CustomColorOperations.cc  CustomColorOperations.hh  colours.json  main.cc
plugins/sep/colorconfig/schema/: ColoursSchema.json
plugins/sep/sli/: naive-bitmap.cc  naive-bitmap.hh  sli-helpers.cc  sli-helpers.hh  slicontrolpanel.cc  slicontrolpanel.hh  slilayer.cc  slilayer.hh  slipresentation.cc  slipresentation.hh  slipresentationinterface.hh  slisource.cc  slisource.hh
plugins/sep/test/: colorconfig-tests.cc  colorhelpers-tests.cc  coloroperations-tests.cc  constants.cc  constants.hh  main.cc  sep-tests.cc  sephelpers-tests.cc  seppresentation-test.cc  seppresentation-tests.cc  sepsource-test.cc  sepsource-tests.cc  sli_test_helper_functions.hh  slihelpers-tests.cc  slipresentation-tests.cc  slisource-tests.cc  testglobals.hh  varnish-tests.cc
plugins/sep/test/testfiles/: C.tif  K.tif  M.tif  M_9.tif  Y.tif  colours.json  sep_cmyk.sep  sep_cmykv.sep  sep_empty_line_2.sep  sep_empty_line_3.sep  sep_extra_lines.sep  sep_missing_channel.sep  sep_test.sep  sli_pipette.sli  sli_scale.sli  sli_seponly.sli  sli_septiffmixed.sli  sli_tiffonly.sli  sli_tinycmyk.sli  sli_tinycmyk_xoffset.sli  sli_varnish.sli  sli_varnish_wrongpath.sli  sli_xoffset.sli  tiff_cmyk.tif  tinycmyk.tif  v_corrupted.tif  v_invalid1bps.tif  v_invalid_no_bps_tag.tif  v_invalid_no_width.tif  v_invalid_zero_res.tif  v_invalidrgb.tif  v_valid.tif  v_valid_centimeter.tif  v_valid_no_spp_tag.tif
plugins/sep/varnish/: varnish-helpers.cc  varnish-helpers.hh  varnish.cc  varnish.hh
plugins/sep_parsing/: main.cc  sep.cc  sepparser.cc  sepparser.hh  sepparserpresentation.cc  sepparserpresentation.hh  seppresentation.hh
